# haiku-scribe

./: .gitignore  CLAUDE.md  LICENSE  README.md  TODO.md  pyproject.toml  test_contract.py
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: haiku-scribe.md
.github/workflows/: ci.yml
.superpowers/sdd/: task-1-4-report.md  task-1-report.md  task-3-report.md  task-4-report.md  task-5-report.md
agents/: haiku-scribe.md
assets/: demo.sh  demo.tape  gen_social_preview.py
bench/: README.md  cost.py  report.py  run_headless.py  sweep.py  test_cost.py  test_report.py
bench/fixtures/: gen_large_file.py
bench/runs/: 2026-07-05-task01-first-pass.jsonl  2026-07-05-task02-impact-analysis.jsonl  2026-07-05-task03-edit-readiness.jsonl  2026-07-05-task05-strict-scout.jsonl  sweep.jsonl
bench/tasks/: 01-orientation.md  02-impact-analysis.md  03-edit-readiness.md  04-docs-control.md  05-strict-scout.md
docs/superpowers/checks/: v0-manual-subagent-checks.sh
docs/superpowers/evaluations/: 2026-07-04-v0-manual-workflow-trials.md  2026-07-05-codegraph-agent-bench.md  2026-07-06-v1-2-break-even-sweep.md  2026-07-06-v1-2-default-hooks-bench.md  2026-07-07-clean-win-qa-extraction.md
hooks/: hooks.json
src/haiku_scribe/: backups.py  cli.py  contracts.py  doctor.py  gain.py  markdown_blocks.py  paths.py  settings.py  setup.py  uninstall.py  v1_2_hooks.py
tests/: test_cli_setup.py  test_contracts.py  test_doctor.py  test_gain.py  test_hooks_proto.py  test_markdown_blocks.py  test_settings.py  test_uninstall.py
(+33 files in other folders)
