[project]
name = "haiku-scribe"
version = "0.1.0"
description = "Claude Code plugin: read-only Haiku context-compression subagent"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[tool.pytest.ini_options]
testpaths = ["test_contract.py"]
